--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -34,16 +34,6 @@
     @include flex-center();
 }
 
-.container-col-mobile {
-    @include flex-center(center, center, column);
-    h1 {
-        margin: 0.10rem;
-    }
-    @media (min-width: 550px) {
-        @include flex-center();
-    }
-}
-
 .container-flex-start {
     @include flex-center(flex-start, flex-start, row);
 }
